--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+PyPDF2==1.20
 args==0.1.0
 clint==0.3.4
+-e git+https://github.com/bwghughes/gerbil.git@9fda07a6ebaac531a9f1cb7823b64963d7140b94#egg=gerbil-master
+reportlab==3.0
 wsgiref==0.1.2
