Refactored to take font as cannot rely on fonts being there

--- a/.gitignore
+++ b/.gitignore
@@ -43,14 +43,8 @@ output/*/index.html
 # Sphinx
 docs/_build
 
-*.py,cover
+# Docs
+*.pdf
 
-*.py,cover
-
-*.py,cover
-
-*.py,cover
-
-*.py,cover
-
-roomyjob/__init__.py,cover
+# Fonts
+*.ttf
