--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Pillow==2.9.0
--e git://github.com/jerickbixly/PyPDF2#egg=PyPDF2
+git://github.com/jerickbixly/PyPDF2#egg=PyPDF2
 args==0.1.0
 clint==0.4.1
 reportlab==3.2.0
